--- a/Module4/webroot/rusty.css
+++ b/Module4/webroot/rusty.css
@@ -1,3 +1,30 @@
+@media screen and (min-width: 980px) /* Desktop */ {
+  body {
+    background: red;
+  }
+  #guarantee {
+    margin-right: 250px;
+  }
+}
+
+@media screen  and (max-width: 979px) /* Tablet */ {
+  body {
+    background: blue;
+  }
+  #guarantee {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 500px) /* Mobile */ {
+  body {
+    background: green;
+  }
+  #guarantee {
+    margin-right: 10px;
+  }
+}
+
 body { 
 	font-size: small;
 	font-family: Verdana, Helvetica, Arial, sans-serif;
@@ -16,35 +43,20 @@ h2 {
 	font-size: 1.3em;
 }
 
-.guarantee {
-	border-style: solid;
-	border-color: black;
-	border-width: 1px;
-	background-color: #e5b5b5;
-	margin: 30px;
-	padding: 25px;
-	line-height: 1.9em;
-	font-style: italic;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	color: #444444;
-}
-
-.guarantee2 {
-	line-height: 1.9em;
-	font-style: italic;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	color: #444444;
-	padding: 25px;
-	padding-left: 80px;
-	margin: 30px;
-	margin-right: 250px;
+#guarantee {
 	border-style: dashed;
 	border-color: white;
 	border-width: 1px;
-	background-color: #e5b5b5;
+	background-color: #e5b5b5;	
+	padding: 25px;
+	padding-left: 80px;
+	line-height: 1.9em;
+	font-style: italic;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	color: #444444;
 	background-image: url(images/guarantee.png);
 	background-repeat: no-repeat;
 	background-position: top left;
-	
 }
+
 
