--- a/Module4/webroot2/rusty.css
+++ b/Module4/webroot2/rusty.css
@@ -1,4 +1,29 @@
+@media screen and (min-width: 980px) /* Desktop */ {
+  body {
+    background: red;
+  }
+  #guarantee {
+    margin-right: 250px;
+  }
+}
 
+@media screen  and (max-width: 979px) /* Tablet */ {
+  body {
+    background: blue;
+  }
+  #guarantee {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 500px) /* Mobile */ {
+  body {
+    background: green;
+  }
+  #guarantee {
+    margin-right: 10px;
+  }
+}
 
 body { 
 	font-size: small;
@@ -23,8 +48,6 @@ h2 {
 	border-color: white;
 	border-width: 1px;
 	background-color: #e5b5b5;	
-	margin: 30px;
-	margin-right: 250px;
 	padding: 25px;
 	padding-left: 80px;
 	line-height: 1.9em;
@@ -34,22 +57,6 @@ h2 {
 	background-image: url(images/guarantee.png);
 	background-repeat: no-repeat;
 	background-position: top left;
-}
-
-#flyer {
-	border-width: thin;
-	border-style: solid;
-	border-color: #7e4040;
-	width: 250px;
-	
-	padding-right: 20px;
-	padding-bottom: 20px;
-	padding-left: 20px;
-	margin-left: 20px;
-	text-align:center;
-	
-	background-image: url(images/sale.png);
-	background-repeat: no-repeat;
 }
 
 
