--- a/Module4/webroot/rusty.css
+++ b/Module4/webroot/rusty.css
@@ -45,11 +45,33 @@ h2 {
 	padding-right: 20px;
 	padding-bottom: 20px;
 	padding-left: 20px;
-	margin-left: 20px;
 	text-align:center;
 	
 	background-image: url(images/sale.png);
 	background-repeat: no-repeat;
+	
+	line-height: 1;
+}
+
+a:link {
+	color: #f54040;	
+}
+
+a:visited {	
+	color: #601010;	
+}
+
+a:hover {
+	color:black;
+	background-color: #e5b5b5;
 }
 
 
+#flyer h2 {
+	color: black;
+	font-size: 2em;
+}
+
+#flyer h3 {
+	color: #C00000;
+}
