--- a/Module4/webroot/rusty.css
+++ b/Module4/webroot/rusty.css
@@ -3,6 +3,25 @@ body {
 	font-size: small;
 	font-family: Verdana, Helvetica, Arial, sans-serif;
 	line-height: 1.6em;
+	background-color:#E0E0E0;
+	margin: 10px;
+}
+
+#rustyHeader {
+	background-color:#303030;
+	padding:10px;
+}
+
+#rustyFooter {
+	background-color:#303030;
+	text-align: center;		
+	padding: 10px;
+	clear: right;
+}
+#rustyFooter p {
+	margin: 0px;
+	color: #F0C0C0;	
+	
 }
 
 h1, h2 {
@@ -18,10 +37,12 @@ h2 {
 }
 
 #guarantee {
+	/*
 	border-style: dashed;
 	border-color: white;
 	border-width: 1px;
-	background-color: #e5b5b5;	
+	background-color: #e5b5b5;
+	*/	
 	margin: 30px;
 	margin-right: 250px;
 	padding: 25px;
@@ -41,6 +62,7 @@ h2 {
 	border-color: #7e4040;
 	width: 250px;
 	float: right;
+	margin: 10px 0px 10px 10px;
 	
 	padding-right: 20px;
 	padding-bottom: 20px;
@@ -51,7 +73,7 @@ h2 {
 	background-image: url(images/sale.png);
 	background-repeat: no-repeat;
 	
-	line-height: 1;
+	line-height: 1;	
 }
 
 a:link {
@@ -75,4 +97,9 @@ a:hover {
 
 #flyer h3 {
 	color: #C00000;
+}
+
+#flyer .footer {
+	font-style: italic;
+	padding-top: 1em;
 }
