--- a/Module5/webroot/spatcity.css
+++ b/Module5/webroot/spatcity.css
@@ -4,6 +4,29 @@ body {
 
 header,footer {
 	background-color: #709090;	
+	color: #d9d9d9;
+}
+
+footer {
+	text-align: center;
+}
+
+footer p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 4px;
+	padding-bottom:4px;
+}
+
+header img {
+	padding-left:10px;
+}
+
+#statement {	
+	font-size: 2em;
+	float:right;
+	width:250px;
+	padding-right:20px;
 }
 
 nav, section, aside {
@@ -23,10 +46,16 @@ nav, section, aside {
 	
 }
 
+section {
+	padding: 10px;
+}
+
 section#products {
 	display: table-cell;	
 	width:225px;
 }
+
+
 
 section#blog {	
 	display: table-cell;
@@ -35,4 +64,7 @@ section#blog {
 aside {
 	display: table-cell;
 	width: 250px;	
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
 }
