--- a/Course_Online/Exercise2/WebContent/kidspace.css
+++ b/Course_Online/Exercise2/WebContent/kidspace.css
@@ -53,6 +53,7 @@ body {
 }
 
 header {
+	text-align:center;
   border-bottom-style: solid;
   border-bottom-width: 5px;
   border-bottom-color: #d8d8d8;
